tests/ui/closures/2229_closure_analysis/simple-struct-min-capture.stderr
error: First Pass analysis includes:
  --> $DIR/simple-struct-min-capture.rs:24:5
   |
LL | /     || {
LL | |
LL | |
LL | |         p.x += 10;
...  |
LL | |     };
   | |_____^
   |
note: Capturing p[(0, 0)] -> Mutable
  --> $DIR/simple-struct-min-capture.rs:27:9
   |
LL |         p.x += 10;
   |         ^^^
note: Capturing p[] -> Immutable
  --> $DIR/simple-struct-min-capture.rs:30:26
   |
LL |         println!("{:?}", p);
   |                          ^

error: Min Capture analysis includes:
  --> $DIR/simple-struct-min-capture.rs:24:5
   |
LL | /     || {
LL | |
LL | |
LL | |         p.x += 10;
...  |
LL | |     };
   | |_____^
   |
note: Min Capture p[] -> Mutable
  --> $DIR/simple-struct-min-capture.rs:27:9
   |
LL |         p.x += 10;
   |         ^^^ p[] captured as Mutable here
...
LL |         println!("{:?}", p);
   |                          ^ p[] used here

error: aborting due to 2 previous errors

